# operating-system-Project

./: CMakeLists.txt  README.md  main.cpp  makefile  server.py
include/: algorithms.h  parser.h  stats.h  utils.h
src/: Aging.cpp  FB.cpp  FCFS.cpp  HRRN.cpp  RR.cpp  SPN.cpp  SRT.cpp  parser.cpp  stats.cpp  utils.cpp
testcases/: basic_fcfs.txt
tests/: test_algorithms.cpp
web/: index.html  scheduler.js  script.js  style.css
